Update header-bottom-img.png for high resolution screens

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- Header Bottom Image -->
     <div class="header-wave">
-      <img src="images/header-bottom-img.png" alt="Header bottom image">
+      <img src="https://i.imgur.com/4S4lyN6.png" alt="Header bottom image">
     </div>
   </header>
 
