Fix spelling in the pricing tables

--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
           <li>1 Vinyasa Yoga Class</li>
           <li>1 Kundalini Yoga Class</li>
           <li>1 Bikram Yoga Class</li>
-          <li>1 Aroma Therapy Class</li>
+          <li>1 Aromatherapy Class</li>
           <li class="get"><a class="get-btn" href="#">I WANT THIS!</a></li>
         </ul>
         <ul class="pricing-plan">
           <li class="pricing-title">FLEX</li>
           <li class="price">50 &euro; / month</li>
           <li>5 Yoga Classes of Your Choice</li>
-          <li>1 Aroma Therapy Class</li>
+          <li>1 Aromatherapy Class</li>
           <li>1 Private Class</li>
           <li>10% Discount on Workshops</li>
           <li class="get"><a class="get-btn" href="#">I WANT THIS!</a></li>
@@ -111,7 +111,7 @@
           <li class="pricing-title">UNLIMITED</li>
           <li class="price">150 &euro; / month</li>
           <li>Unlimited Classes of Your Choice</li>
-          <li>Yoga Retreats in Nature</li>
+          <li>Yoga Retreats in the Nature</li>
           <li>3 Private Classes</li>
           <li>20% Discount on Workshops</li>
           <li class="get"><a class="get-btn" href="#">I WANT THIS!</a></li>
