adding a phone img

--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
 
     <!-- Intro -->
     <section class="intro">
-      <h1 class="main-title">INSURANCE CAN ALSO BE SIMPLE.</h1>
+      <div class="title"><h1 class="main-title">INSURANCE CAN ALSO BE SIMPLE.</h1>
       <a href="#contact" class="join-btn">Check our prices</a>
+      </div>
+      <div class="phone">
+      <img src="images/phone.png" alt="phone">
+      </div>
     </section>
 
     <!-- About -->
